--- a/docs/cv/chandrakana_CV.tex
+++ b/docs/cv/chandrakana_CV.tex
@@ -24,7 +24,7 @@
 
 \usepackage{helvet} % Default font is the helvetica postscript font
 %\usepackage{newcent} % To change the default font to the new century schoolbook postscript font uncomment this line and comment the one above
-\usepackage[hidelinks]{hyperref}
+\usepackage{hyperref}
 
 \usepackage{enumitem}
 
@@ -40,10 +40,13 @@
 
 \moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip % Horizontal line after name; adjust line thickness by changing the '1pt'
 
-\moveleft.5\hoffset\centerline {Paul G. Allen School of Computer Science \& Engineering, University of Washington}
+%\moveleft.5\hoffset\centerline {Paul G. Allen School of Computer Science \& Engineering, University of Washington}
+%%\moveleft.5\hoffset\centerline {Box 352350, 185 Stevens Way, Seattle WA 98195-2350}
+%\moveleft.5\hoffset\centerline {Website: homes.cs.washington.edu/$\sim$cnandi}
+%\moveleft.5\hoffset\centerline {Email: cnandi@cs.washington.edu}
+
+
 %\moveleft.5\hoffset\centerline {Box 352350, 185 Stevens Way, Seattle WA 98195-2350}
-\moveleft.5\hoffset\centerline {Website: homes.cs.washington.edu/$\sim$cnandi}
-\moveleft.5\hoffset\centerline {Email: cnandi@cs.washington.edu}
 
 %----------------------------------------------------------------------------------------
 
@@ -52,85 +55,167 @@
 
 %I am interested in developing techniques which make it easier for programmers to write correct code and using those techniques to build real systems. Currently, I am advised by Dan Grossman in the PLSE group at UW, Seattle.
 
+\section{Employment}
+
+Principal Researcher at Certora Inc., April 2023 - present \\
+Formal Verification Team Lead at Certora Inc., June 2022 - March 2023 \\
+Senior Researcher at Certora Inc., September 2021 - May 2022 \\
+%\href{https://scholar.google.com/citations?user=XnW0nrsAAAAJ&hl=en}{Google Scholar} \\
+  Website: \url{https://cnandi.com/} \\
+%ACM and SIGPLAN Member \\
+%Annual Base salary: \$200,000.00
+
 \section{Education}
 
-PhD in Computer Science at UW CSE, Fall 2015 - Present \\
+PhD in Computer Science, Fall 2015 - Summer 2021 \\
+Paul G. Allen School of Computer Science \& Engineering, UW \\
 Thesis topic: Programming Language Techniques for Computational Fabrication \\
 Advisors: Zachary Tatlock, Dan Grossman\\
-\textbf{Adobe Research Fellow, 2019}
+\textbf{Adobe Research Fellow, 2019} \\
+%\textbf{Work funded by NSF grant awards: 1813166, 174957} \\
 
-{\sl Master of Science,} Computer Science \\
-Paul G. Allen School of Computer Science \& Engineering, UW, June 2018 \\
+{\sl Master of Science,} Computer Science, June 2018 \\
+Paul G. Allen School of Computer Science \& Engineering, UW \\
 Advisors: Zachary Tatlock, Dan Grossman
 
-{\sl Master of Science,} Computer Science \\
-\'{E}cole Polytechnique F\'{e}d\'{e}rale de Lausanne(EPFL), Switzerland, August 2014 \\
+{\sl Master of Science,} Computer Science, August 2014 \\
+\'{E}cole Polytechnique F\'{e}d\'{e}rale de Lausanne(EPFL), Switzerland \\
 Thesis: Contracts for Real-Time, Safety Critical Systems \\Supervisors: Prof.Viktor Kuncak, Dr.Manuel Oriol\\
 \textbf{M.Sc Research Scholars Program and Swiss Government Fellow}
 
-{\sl Bachelor of Science,} Statistics, Mathematics and Computer Science \\
-Banaras Hindu University (BHU), Varanasi, India, June 2012 \\
+{\sl Bachelor of Science,} Statistics, Mathematics and Computer Science, June 2012 \\
+Banaras Hindu University (BHU), Varanasi, India \\
 Concentration: Statistics \\
 Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh\\
 \textbf{University Gold Medalist for graduating with highest GPA}
 
 \section{Publications}
-%\subsection{Under submission}
-%  \begin{enumerate}
-%    \item Chandrakana Nandi, Adam Anderson, James R. Wilcox, Eva Darulova, Dan Grossman, Zachary Tatlock. Szalinski: Inferring Parameters in Computer-aided Design, submitted to OOPSLA 2019.
-%     \item Chandrakana Nandi, Jessica Birchfield, Stuart Pernsteiner, Max Willsey, Zachary Tatlock, Jennifer Mankoff. 3D Printing Optical Diffusers Using Only Fused Deposition Modeling, submitted to SCF 2019.
-%  \end{enumerate}
 \subsection{Peer reviewed conference and workshop papers}
+%There are 4 top international conferences in the area of programming languages:
+%POPL, PLDI, OOPSLA, ICFP.
+%Paper acceptance is highly selective, and
+%  Distinguished Paper Awards are given to only top 10\% of the accepted papers.
+%SIGGRAPH and SIGGRAPH Asia are the top two venues for computer graphics ---
+%  the proceedings of both are published in the ACM TOG (Transaction on Graphics).
+%UIST is one of the top venues for Human Computer Interaction, and
+%ARITH is a top tier venue for computer numerics. \\
+
+
 \begin{enumerate}
-  \item Chandrakana Nandi, Max Willsey, Amy zhu, Brett Saiki, Yisu Wang, Adam Anderson, Adriana Schulz, Dan Grossman, Zachary Tatlock.
-    Rewrite Rule Inference Using Equality Saturation. OOPSLA 2021
-\item Jasper Tran O'Leary, Chandrakana Nandi, Khang Lee, Nadya Peek.
-  Taxon: a Language for Formal Reasoning with Digital Fabrication Machines. UIST 2021
-\item Brett Saiki, Oliver Flatt, Chandrakana Nandi, Zachary Tatlock, Pavel Panchekha.
-  Combining Precision Tuning and Rewriting. ARITH 2021
-\item    Max Willsey, Chandrakana Nandi, Remy Wang, Oliver Flatt, Pavel Panchekha, Zachary Tatlock.
+  \item Enzo Nicourt, Ylies Falcone, \textbf{Chandrakana Nandi}. \\
+    Towards Mutation-guided Test Suites for Smart Contracts, , \textit{Under submission}.
+
+  \item Anjali Pal, Brett Saiki, Cynthia Richey, Amy Zhu, Ryan Tjoa, Oliver Flatt, Max Willsey, Zachary Tatlock, \textbf{Chandrakana Nandi}. \\
+    Equality Saturation Theory Exploration à la Carte, \textit{Under submission}.
+
+  \item John Toman, Shelly Grossman, Alexander Bakst, Mooly Sagiv, \textbf{Chandrakana Nandi}. \\
+    Pointer Analysis Guided Verification of Ethereum Bytecode, \textit{Under submission}.
+
+  \item David Cao, Rose Kunkel, \textbf{Chandrakana Nandi}, Max Willsey, Zachary Tatlock, Nadia Polikarpova. \\
+    \textit{babble}: Learning Better Abstractions with E-Graphs and Anti-Unification, POPL 2023.
+
+  \item Haisen  Zhao, Max Willsey, Amy Zhu, \textbf{Chandrakana Nandi}, Zachary Tatlock, Justin Solomon, Adriana Schulz. \\
+    Co-Optimization of Design and Fabrication Plans for Carpentry, SIGGRAPH 2022 (ACM TOG).
+
+  \item \textbf{Chandrakana Nandi}, Max Willsey, Amy zhu, Brett Saiki, Yisu Wang, Adam Anderson, Adriana Schulz, Dan Grossman, Zachary Tatlock.
+    Rewrite Rule Inference Using Equality Saturation. OOPSLA 2021. \\
+    \textbf{Distinguished Paper Award}
+
+  \item Jasper Tran O'Leary, \textbf{Chandrakana Nandi}, Khang Lee, Nadya Peek. \\
+  Taxon: a Language for Formal Reasoning with Digital Fabrication Machines. UIST 2021.
+
+\item Brett Saiki, Oliver Flatt, \textbf{Chandrakana Nandi}, Zachary Tatlock, Pavel Panchekha. \\
+  Combining Precision Tuning and Rewriting. ARITH 2021.
+
+\item Molly Carton, \textbf{Chandrakana Nandi}, Adam Anderson, Haisen Zhao, Eva Darulova, Dan Grossman, Jeff Lipton, Adriana Schulz, Zachary Tatlock. \\
+  A Roadmap Towards Parallel Printing for Desktop 3D Printers. SFF 2021.
+
+\item Max Willsey, \textbf{Chandrakana Nandi}, Remy Wang, Oliver Flatt, Pavel Panchekha, Zachary Tatlock. \\
     Fast and Extensible Equality Saturation. POPL 2021 \\
     \textbf{Distinguished Paper Award}
-\item Chandrakana Nandi, Max Willsey, Adam Anderson, James R. Wilcox, Eva Darulova, Dan Grossman, Zachary Tatlock.
-    Synthesizing Structured CAD Models with Equality Saturation and Inverse Transformations. PLDI 2020
-\item Chenming Wu, Haisen Zhao, Chandrakana Nandi, Jeff Lipton, Zachary Tatlock, Adriana Schulz. Carpentry Compiler. SIGGRAPH ASIA 2019
-\item Chandrakana Nandi, James R. Wilcox, Pavel Panchekha, Taylor Blau, Dan Grossman, Zachary Tatlock. Functional Programming for Compiling and Decompiling Computer-aided Design. ICFP 2018
-\item Chandrakana Nandi, Anat Caspi, Dan Grossman, Zachary Tatlock. Programming Language Tools and Techniques for 3D Printing. SNAPL 2017.
-\item Chandrakana Nandi, Dan Grossman, Adrian Sampson, Todd Mytkowicz, Kathryn S. McKinley. Debugging Probabilistic Programs. MAPL 2017.
-\item Chandrakana Nandi, Dan Grossman, Adrian Sampson, Todd Mytkowicz, Kathryn S. McKinley. Debugging Probabilistic Programs. PPS 2017.
-\item Chandrakana Nandi, Michael D. Ernst. Automatic Trigger Generation for Rule-based Smart Homes. ACM SIGPLAN PLAS 2016.
-\item Chandrakana Nandi. Automatic Trigger Generation for End User Written Rules for Home Automation. ACM FSE SRC 2016.
-\item Chandrakana Nandi: Correctness and Security for Home Automation. POPL SRC 2016.
-\item Chandrakana Nandi, Aurelien Monot, Manuel Oriol: Stochastic Contracts for Runtime Checking of Component-based Real-time Systems. CBSE'15: 18th International ACM SIGSOFT Symposium on Component-Based Software Engineering.
+
+  \item \textbf{Chandrakana Nandi}, Max Willsey, Adam Anderson, James R. Wilcox, Eva Darulova, Dan Grossman, Zachary Tatlock. \\
+    Synthesizing Structured CAD Models with Equality Saturation and Inverse Transformations. PLDI 2020.
+  \item Chenming Wu, Haisen Zhao, \textbf{Chandrakana Nandi}, Jeff Lipton, Zachary Tatlock, Adriana Schulz. \\
+    Carpentry Compiler. SIGGRAPH ASIA 2019
+
+  \item \textbf{Chandrakana Nandi}, James R. Wilcox, Pavel Panchekha, Taylor Blau, Dan Grossman, Zachary Tatlock. \\
+    Functional Programming for Compiling and Decompiling Computer-aided Design. ICFP 2018.
+  \item \textbf{Chandrakana Nandi}, Anat Caspi, Dan Grossman, Zachary Tatlock. \\
+    Programming Language Tools and Techniques for 3D Printing. SNAPL 2017.
+
+  \item \textbf{Chandrakana Nandi}, Dan Grossman, Adrian Sampson, Todd Mytkowicz, Kathryn S. McKinley. \\ Debugging Probabilistic Programs. MAPL 2017.
+  \item \textbf{Chandrakana Nandi}, Dan Grossman, Adrian Sampson, Todd Mytkowicz, Kathryn S. McKinley. \\ Debugging Probabilistic Programs. PPS 2017.
+\item \textbf{Chandrakana Nandi}, Michael D. Ernst. \\ Automatic Trigger Generation for Rule-based Smart Homes. ACM SIGPLAN PLAS 2016.
+\item \textbf{Chandrakana Nandi}. Automatic Trigger Generation for End User Written Rules for Home Automation. ACM FSE SRC 2016.
+\item \textbf{Chandrakana Nandi}. Correctness and Security for Home Automation. POPL SRC 2016.
+\item \textbf{Chandrakana Nandi}, Aurelien Monot, Manuel Oriol: Stochastic Contracts for Runtime Checking of Component-based Real-time Systems. CBSE'15: 18th International ACM SIGSOFT Symposium on Component-Based Software Engineering.
 \end{enumerate}
 \subsection{Theses}
 \begin{enumerate}
+\item C. Nandi: Programming Language Tools and Techniques for Computational Fabrication. {PhD Thesis}, UW, August 2021
 \item C. Nandi: Functional Programming for Compiling and Decompiling Computer-aided Design, {MS Thesis}, UW, March 2018
 \item C. Nandi: Contracts for Real-Time, Safety Critical Systems, {Masters Thesis}, EPFL, August 2014
 \item C. Nandi: Social Network based Analysis of Behavior, {Bachelors Thesis}, BHU, April 2012
 \end{enumerate}
 
-\section{Research Mentorship}
-\begin{enumerate}
-  \item Adam Anderson, UW BS
-  \item Brett Saiki, UW BS
-  \item Grace Oh, High School $\rightarrow$ Princeton BS
-  \item Taylor Blau, UW BS $\rightarrow$ Github
-  \item Seth Pendergrass, UW BS $\rightarrow$ Microsoft
-  \item Melissa Hovik, UW BS/MS $\rightarrow$ Caltech, Teaching Faculty
+\section{Professional services}
+
+
+\subsection{Review committees}
+%Top international
+%conferences in the field of
+%programming languages are PLDI, POPL, OOPSLA, and IFCP. Membership in all the
+%following review committees are by invitation only. \\
+
+\begin{enumerate}[itemsep=-2pt]
+\item ASPLOS 2024 program committee (PC)
+\item TFP 2024 program committee (PC)
+\item ISSTA 2023 program committee (PC)
+\item APLAS 2023 program committee (PC)
+\item ACM-SR 2023 Grand Finale judge
+\item OOPSLA 2023 external review committee (ERC)
+\item EGRAPHS 2023 review committee (PC)
+\item PLDI 2022 review committee (PC)
+\item OOPSLA 2022 external review committee (ERC)
+\item EGRAPHS 2022 review committee (PC)
+\item PLDI-SRC 2022 review committee (PC)
+\item SFF 2021 review committee
+\item Subreviewer, ACM Symposium on Computational Fabrication (SCF), 2020
+\item Artifact Evaluation Committee, ASPLOS 2020
+\item External Reviewer, ICFP SRC 2019
+\item External Reviewer, UBICOMP 2018
+\item Reviewer for Elsevier journal, Future Generation Computer Systems 2016
 \end{enumerate}
 
-\section{TA Experience}
-\begin{enumerate}
-\item Winter 2018. CSE 341: Programming Languages, UW, Seattle
-\item Spring, Fall 2016. CSE 331: Software Design and Implementation, UW, Seattle
-\item Spring 2015: Concepts of Concurrent Computation, graduate level, ETH Zurich
-\item Fall 2014: Introduction to Programming, undergraduate level, ETH Zurich
+\subsection{Organizing}
+\begin{enumerate}[itemsep=-2pt]
+  \item PLDI-SRC 2024 co-chair
+  \item ISSTA-SRC 2023 inaugural co-chair
+  \item PLDI-SRC 2023 co-chair
+  \item DeFi Security Summit (DSS) Steering committee (current)
+  \item National Conference on HPCA, BHU, 2010
+\end{enumerate}
+
+\subsection{Other service}
+\begin{enumerate}[itemsep=-2pt]
+\item {Panelist, Formal Verification and Security panel, ETH Denver 2023}
+\item SIGPLAN-M mentor, 2022 - current
+\item Session Chair at PLDI 2022 and SIGPLAN tracks
+\item Session Chair at EGRAPHS 2022
+\item Session Chair at OOPSLA 2021
+\item PLMW Panelist, PLDI 2020
+\item PSC Chair, Visit Days 2017, UW CSE
+\item Student volunteer at POPL 2016
+\item ACM-W mentorship program 2015, UW CSE
+\item Session Chair at ACM CBSE 2015, session: Component and Composition
 \end{enumerate}
 
 \section{Awards}
 \begin{enumerate}[itemsep=.5pt]
-\item POPL 2021 Distinguished Paper Award
+\item Rising Stars in EECS Award, 2021
+\item OOPSLA 2021 \textbf{Distinguished Paper Award}
+\item POPL 2021 \textbf{Distinguished Paper Award}
 \item Adobe Research Fellowship 2019
 \item CRA-W Grad Cohort Workshop 2016 invitee
 \item Scholarship and travel grant to attend SIGPLAN PLMW and POPL 2016
@@ -138,22 +223,49 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
 \item Swiss Government Fellow from September 2012-2014
   % (full fellowship during masters studies at EPFL)
 \item M.Sc Research Scholars Program under Prof. Joseph Sifakis, 2012
-\item Five awards in the $95^{th}$ convocation of BHU, 2013
-\begin{itemize}\itemsep -2pt
-\item University Gold Medal for having the highest GPA in the
-  Institute of Science, BHU
-\item Department Gold Medal for having the highest GPA in the Department of Statistics, BHU
-\item Gold Medal for having the highest GPA among all Female students in the
-  Institute of Science, BHU
-\item Dr. Basudeo Sahni Gold Medal
-\item Cash award and university scholarship holder for academic excellence
-  for 3 consecutive years
-\end{itemize}
+\item University Gold Medal for having the highest GPA at the
+  Institute of Science, BHU, 2012
+\item Department Gold Medal for having the highest GPA in the Department of Statistics, BHU, 2012
+\item Gargi Devi Deodhar Silver Medal, Institute of Science, BHU, 2012
+\item Manorama Gold Medal for having the highest GPA among all Female students at the
+  Institute of Science, BHU, 2012
+\item Dr. Basudeo Sahni Medal for highest GPA at the
+  Institute of Science, BHU, 2012
+\item University scholarship holder for academic excellence at the Institute of Science, BHU,
+  for 3 consecutive years.
+%\begin{itemize}\itemsep -2pt
+%\item University Gold Medal for having the highest GPA in the
+%  Institute of Science, BHU
+%\item Department Gold Medal for having the highest GPA in the Department of Statistics, BHU
+%\item Gargi Devi Deodhar Silver Medal for having the highest GPA
+%  Institute of Science, BHU
+%\item Manorama Gold Medal for having the highest GPA among all Female students in the
+%  Institute of Science, BHU
+%\item Dr. Basudeo Sahni Medal for highest GPA in the
+%  Institute of Science, BHU
+%\item Cash award and university scholarship holder for academic excellence
+%  for 3 consecutive years
+%\end{itemize}
 \item Secured All India Rank 14 in the IIT-Joint Admission Test for Mathematical Statistics in 2012
 \end{enumerate}
 
 \section{Talks}
  \begin{itemize}[itemsep=.7pt]
+ \item{\sl Formal Verification Using the Certora Prover}, Invited Speaker, CMU Secure Blockchain summit, May 2023
+ \item{\sl Using Mutation Testing to Write Better Formal Specs}, ETH Denver, March 2023
+ \item{\sl Formally verifying what you execute} DeFi FV in Practice, Denver, March 2023
+ \item{\sl Formal Verification Using the Certora Prover}, Invited Lecture, UPenn, Nov 2022
+ \item{\sl Future of Smart Contract Security}, Panelist, Devcon, Bogota, Oct 2022
+ \item {\sl Formal Verification Using the Certora Prover}, Invited Lecture,
+   (\href{https://www.certora.com/events/certora-prover-2-day-workshop/}{link})
+   Stanford, Aug 2022
+ \item {\sl Formal Verification Using the Certora Prover}, Invited Lecture,
+   (\href{https://github.com/Certora/Tutorials/tree/master/05.Lesson_GettingFamiliarWithCVT}{link})
+   Secureum Bootcamp, Feb 2022
+ \item {\sl Rewrite Rule Inference Using Equality Saturation}, Invited Talk, NVIDIA Research, Feb 2022
+ \item {\sl Rewrite Rule Inference Using Equality Saturation}, Invited Talk, NUS, Singapore, Nov 2021
+ \item {\sl Rewrite Rule Inference Using Equality Saturation}, Conference Talk, OOPSLA, October 2021
+ \item {\sl Programming Languages Tools and Techniques for 3D Printing}, Invited Talk, MIT, October 2021
  \item {\sl Efficient Term Rewriting and Rewrite Rule Inference with Equality Saturation}, Invited Talk, Intel, May 2021
  \item {\sl Synthesizing Structured CAD Models with Equality Saturation and Inverse Transformations}, Invited Talk, UCSD PL Seminar, Nov 2020
  \item {\sl Synthesizing Structured CAD Models with Equality Saturation and Inverse Transformations}, Conference Talk, PLDI, June 2020
@@ -171,69 +283,110 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
  \item {\sl A Bi-directional Model Transformation Tool between BIP and FASA}, ABB Corporate Research, November 2013
  \end{itemize}
 
-\section{Program Committees}
-\begin{enumerate}[itemsep=-2pt]
-\item PLDI 2022 PC member
-\item Subreviewer, ACM Symposium on Computational Fabrication (SCF), 2020
-\item Artifact Evaluation Committee, ASPLOS 2020
-\item External Reviewer, ICFP SRC 2019
-\item External Reviewer, UBICOMP 2018
-\item Reviewer for Elsevier journal, Future Generation Computer Systems 2016
+\section{Media Coverage}
+\begin{itemize}
+  \item Featured in the ICFP 2021 trailer
+  \item Invited SIGPLAN Article on Fast and Extensible Equality Saturation, April 2021
+  \item Co-author of a SIGPLAN blog on Conferences after COVID: An Early-Career Perspective, March 2021
+  \item Media coverage for Carpentry Compiler published in 2019:
+    \begin{enumerate}
+      \item UW News Article, 2019
+      \item Tech Crunch Article, 2019
+      \item The Daily of UW Article, 2020
+    \end{enumerate}
+  \item ``I Am CSE" video for Reincarnate, UW CSE 2020
+ \end{itemize}
+
+\section{Research Mentorship}
+\begin{enumerate}
+  \item Ben Kushigian, intern at Certora (March - June 2023)
+  \item Thia Richey, intern at Certora (June - Sept 2023)
+  \item Oliver Flatt, intern at Certora (Jan - Aug 2022)
+  \item Vishal Canumalla, intern at Certora (March - June 2022)
+  \item Amy Zhu, UW PhD Student
+  \item Anjali Pal, UW PhD Student
+  \item Brett Saiki, UW BS/MS
+  \item Anagha G, BS student at BIT Hyderabad India, SIGPLAN-M, Jan 2023 - current
+  \item Alperen Keles, PhD student at University of Maryland, SIGPLAN-M, May 2022 - Jan 2023
+  \item Ben Phipathananunth, intern at Certora (June - December 2022)
+     \begin{itemize}
+       \item Second Place at the ACM-SPLASH Student Research Contest (undergraduate category), 2022
+     \end{itemize}
+  \item Adam Anderson, UW BS (March 2018 - Nov 2020)
+  \item Grace Oh, High School $\rightarrow$ Princeton BS
+  \item Taylor Blau, UW BS $\rightarrow$ Github
+  \item Seth Pendergrass, UW BS $\rightarrow$ Microsoft
+  \item Melissa Hovik, UW BS/MS $\rightarrow$ Caltech, Teaching Faculty
 \end{enumerate}
 
-\section{Professional Services}
-\begin{enumerate}[itemsep=-2pt]
-\item Co-author of a SIGPLAN blog on Conferences after COVID: An Early-Career Perspective, March 2021
-\item PLMW Panelist, PLDI 2020
-\item PSC Chair, Visit Days 2017, UW CSE
-\item Student volunteer at POPL 2016
-\item ACM-W mentorship program 2015: Mentoring female CSE undergrduates at UW Seattle, currently have two mentees
-\item Session Chair at ACM CBSE 2015, session: Component and Composition
-\item Member of the organizing team of the 2010 National Conference on High
-  Performance Computing and Applications and Workshop on Graph and
-  Geometric Algorithms organized by Banaras Hindu University
+\section{TA Experience}
+\begin{enumerate}
+\item Winter 2018. CSE 341: Programming Languages, UW, Seattle
+\item Spring, Fall 2016. CSE 331: Software Design and Implementation, UW, Seattle
+\item Spring 2015: Concepts of Concurrent Computation, graduate level, ETH Zurich
+\item Fall 2014: Introduction to Programming, undergraduate level, ETH Zurich
 \end{enumerate}
 
-\section{Work \\ Experience}
-{\sl Summer intern} \hfill June 2016 - August 2016 \\
+
+
+\section{Prior Work \\ Experience}
+{\sl Research Intern} \hfill June 2016 - August 2016 \\
 RiSE group, Microsoft Research, Redmond
 %\begin{itemize} \itemsep -2pt
-%    \item Extended a probabilistic programming language to make statistical
-%      inference a first class citizen
-%    \item Designed and implemented a debugger for probabilistic programs
+%    \item Developed a probabilistic programming language to make statistical
+%      inference a first class citizen.
+%    \item Designed and implemented a debugger for probabilistic programs to work
+%      with the language.
+%    \item Evaluated the debugger on a variety of benchmarks demonstrating
+%      the benefits of the debugger and the ability to express statistical
+%      inference in the language.
+%    \item Wrote and published a research paper at an ACM symposium (MAPL 2017)
+%      and a workshop (PPS 2017).
+%
 %\end{itemize}
 
 {\sl Research Assistant} \hfill September 2014 - June 2015 \\
 Chair of Software Engineering, ETH Zurich
 %\begin{itemize} \itemsep -2pt % Reduce space between items
 %\item Worked on specifying functional properties of concurrent OO programs
-%  in the SCOOP concurrency model in Eiffel
+%  in the SCOOP concurrency model in the programming language Eiffel.
+%\item This was useful for verifying the correctness of concurrent programs,
+%  an incredibly challenging problem in programming language and formal methods.
+%\item While at ETH, I also TA-ed for a graduate level class on concurrent programming,
+%  "Concepts of Concurrent Computation". I developed exciting
+%    verification assignments using model checking and Hoare Logic as part of my
+%    TA work.
 %\end{itemize}
 
-%{\sl Masters Thesis student} \hfill Feb 2014-Aug 2014 \\
-%EPFL and ABB Corporate Research Center, Switzerland\\
-%Advisors: \href{http://lara.epfl.ch/~kuncak/}{Prof. Viktor Kuncak}, \href{http://www-users.cs.york.ac.uk/~manuel/Manuel_Oriols_Website/Profile.html} {Dr. Manuel Oriol}
-%\begin{itemize} \itemsep -2pt % Reduce space between items
-%\item Designed and implemented a framework for specifying and checking functional and real-time properties of component-based industrial software
-%\end{itemize}
-
-{\sl Software Systems Intern} \hfill August 2013 - January 2014 \\
+{\sl Research Intern} \hfill August 2013 - August 2014 \\
 ABB Corporate Research Center, Switzerland
 %\begin{itemize}
-%\item Designed and implemented a bi-directional model transformation tool
-%  between two component based frameworks used for writing real-time
-%  safety-critical software
+%  \item Designed and implemented a bi-directional model transformer
+%    and compiler between two component based frameworks used for writing and
+%    verifying real-time safety-critical software.
+%  \item My internship was extended by another 6 months based on the success of
+%    my first project.
+%    I started a second project in collaboration with
+%    Prof. Viktor Kuncak's lab at
+%    EPFL University (Switzerland) that focused on formal verification of software.
+%\item For this project, I
+%  designed and implemented a framework for formally
+%    specifying and checking
+%    functional and real-time properties of component-based industrial software.
+%\item This project also contributed to my MS thesis work at EPFL and led
+%  to a publication at an international ACM Conference (CBSE 2015).
+%   % \href{http://lara.epfl.ch/~kuncak/}{Prof. Viktor Kuncak},
+%   % \href{http://www-users.cs.york.ac.uk/~manuel/Manuel_Oriols_Website/Profile.html} {Dr. Manuel Oriol}
 %\end{itemize}
 
-{\sl Summer Intern}  \hfill June 2010 - July 2010 \\
-BIOROB, EPFL, Switzerland
-%Supervisor: \href{http://biorob.epfl.ch/people/ijspeert} {Prof. Auke J. Ijspeert}
+{\sl Research Intern}  \hfill June 2010 - July 2010 \\
+Bio-robotics Lab, EPFL, Switzerland
 %\begin{itemize}
 %\item Analyzed the locomotion of a salamander from X-Ray movies and
 %  implemented a graphical simulation of the temporal variations in the angles
 %  at the different joints on the salamander's body
 %\item This was very useful for the design of the famous salamander robot
-%  developed at EPFL called \href{http://biorob.epfl.ch/salamandra}{Salamandra Robotica}
+%  developed at EPFL called \href{http://biorob.epfl.ch/salamandra}{Salamandra Robotica}.
 %\end{itemize}
 
 
@@ -251,13 +404,6 @@ BIOROB, EPFL, Switzerland
 % \item {Workshop on Software Correctness and Reliability, October 3-4, 2014, ETH Zurich }
 % \item {FMCAD October 21-24, 2014, EPFL Lausanne}
 % \end{itemize}
-
-% \section{Media Coverage}
-% \begin{itemize}
-%   \item SIGPLAN Blog on Fast and Extensible Equality Saturation, April 2021
-%   \item Tech Crunch, The UW Daily for Carpentry Compiler, 2020
-%   \item I Am CSE for Reincarnate, UW CSE 2020
-%  \end{itemize}
 
 
 \section{Language Proficiency}
