--- a/docs/cv/chandrakana_CV.tex
+++ b/docs/cv/chandrakana_CV.tex
@@ -175,7 +175,7 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
 \item TFP 2024 program committee (PC)
 \item ISSTA 2023 program committee (PC)
 \item APLAS 2023 program committee (PC)
-\item ACM-SR 2023 Grand Finale judge
+\item ACM-SRC 2023 Grand Finale judge
 \item OOPSLA 2023 external review committee (ERC)
 \item EGRAPHS 2023 review committee (PC)
 \item PLDI 2022 review committee (PC)
