--- a/docs/cv/chandrakana_CV.tex
+++ b/docs/cv/chandrakana_CV.tex
@@ -58,12 +58,11 @@
 \section{Employment}
 
 Principal Researcher at Certora Inc., April 2023 - present \\
+Affiliate Assistant Professor, UW, Seattle, January 2023 - present \\
+
 Formal Verification Team Lead at Certora Inc., June 2022 - March 2023 \\
 Senior Researcher at Certora Inc., September 2021 - May 2022 \\
-%\href{https://scholar.google.com/citations?user=XnW0nrsAAAAJ&hl=en}{Google Scholar} \\
-  Website: \url{https://cnandi.com/} \\
-%ACM and SIGPLAN Member \\
-%Annual Base salary: \$200,000.00
+Website: \url{https://cnandi.com/} \\
 
 \section{Education}
 
@@ -302,19 +301,19 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
 
 \section{Research Mentorship}
 \begin{enumerate}
-  \item Ben Kushigian, intern at Certora (March - June 2023)
+  \item Ben Kushigian, intern at Certora (March - Sept 2023)
   \item Thia Richey, intern at Certora (June - Sept 2023)
   \item Oliver Flatt, intern at Certora (Jan - Aug 2022)
   \item Vishal Canumalla, intern at Certora (March - June 2022)
+  \item Ben Phipathananunth, intern at Certora (June - Dec 2022) $\rightarrow$ Yale PhD student
+     \begin{itemize}
+       \item $2^{nd}$ place, ACM-SPLASH SRC (undergraduate category), 2022
+     \end{itemize}
   \item Amy Zhu, UW PhD Student
   \item Anjali Pal, UW PhD Student
   \item Brett Saiki, UW BS/MS
-  \item Anagha G, BS student at BIT Hyderabad India, SIGPLAN-M, Jan 2023 - current
-  \item Alperen Keles, PhD student at University of Maryland, SIGPLAN-M, May 2022 - Jan 2023
-  \item Ben Phipathananunth, intern at Certora (June - December 2022)
-     \begin{itemize}
-       \item Second Place at the ACM-SPLASH Student Research Contest (undergraduate category), 2022
-     \end{itemize}
+  \item Anagha G, BIT Hyderabad BS, SIGPLAN-M, Jan 2023 - current
+  \item Alperen Keles, UMD PhD student, SIGPLAN-M, May 2022 - Jan 2023
   \item Adam Anderson, UW BS (March 2018 - Nov 2020)
   \item Grace Oh, High School $\rightarrow$ Princeton BS
   \item Taylor Blau, UW BS $\rightarrow$ Github
