--- a/docs/cv/chandrakana_CV.tex
+++ b/docs/cv/chandrakana_CV.tex
@@ -104,7 +104,7 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
   \item Enzo Nicourt, \textbf{Chandrakana Nandi}, Ylies Falcone. \\
     Towards Mutation-guided Test Suites for Smart Contracts, \textit{Under submission}.
 
-  \item Yihong Zhang, Anjali Pal,ADriana Schulz, Zachary Tatlock, \textbf{Chandrakana Nandi}. \\
+  \item Yihong Zhang, Anjali Pal, Adriana Schulz, Zachary Tatlock, \textbf{Chandrakana Nandi}. \\
     Using Anti-Unification to Scale Parametric CAD Decompilation, \textit{Under submission}.
 
   \item John Toman, Shelly Grossman, Alexander Bakst, Mooly Sagiv, \textbf{Chandrakana Nandi}. \\
@@ -177,6 +177,8 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
 \item APLAS 2023 program committee (PC)
 \item ACM-SRC 2023 Grand Finale judge
 \item OOPSLA 2023 external review committee (ERC)
+\item SCF 2023 subreviewer
+\item TrustX 2023 program committee (PC)
 \item EGRAPHS 2023 review committee (PC)
 \item PLDI 2022 review committee (PC)
 \item OOPSLA 2022 external review committee (ERC)
