--- a/docs/cv/chandrakana_CV.tex
+++ b/docs/cv/chandrakana_CV.tex
@@ -89,7 +89,7 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
 \textbf{University Gold Medalist for graduating with highest GPA}
 
 \section{Publications}
-\subsection{Peer reviewed conference and workshop papers}
+\subsection{Drafts and under submission papers}
 %There are 4 top international conferences in the area of programming languages:
 %POPL, PLDI, OOPSLA, ICFP.
 %Paper acceptance is highly selective, and
@@ -98,20 +98,22 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
 %  the proceedings of both are published in the ACM TOG (Transaction on Graphics).
 %UIST is one of the top venues for Human Computer Interaction, and
 %ARITH is a top tier venue for computer numerics. \\
-
-
 \begin{enumerate}
   \item Enzo Nicourt, \textbf{Chandrakana Nandi}, Ylies Falcone. \\
-    Towards Mutation-guided Test Suites for Smart Contracts, \textit{Under submission}.
+    Towards Mutation-guided Test Suites for Smart Contracts.
 
   \item Yihong Zhang, Anjali Pal, Adriana Schulz, Zachary Tatlock, \textbf{Chandrakana Nandi}. \\
-    Using Anti-Unification to Scale Parametric CAD Decompilation, \textit{Under submission}.
+    Using Anti-Unification to Scale Parametric CAD Decompilation.
 
   \item John Toman, Shelly Grossman, Alexander Bakst, Mooly Sagiv, \textbf{Chandrakana Nandi}. \\
-    Pointer Analysis Guided Verification of Ethereum Bytecode, \textit{Under submission}.
+    Pointer Analysis Guided Verification of Ethereum Bytecode.
+\end{enumerate}
+
+\subsection{Peer reviewed conference and workshop papers}
+\begin{enumerate}
 
   \item Anjali Pal, Brett Saiki, Cynthia Richey, Amy Zhu, Ryan Tjoa, Oliver Flatt, Max Willsey, Zachary Tatlock, \textbf{Chandrakana Nandi}. \\
-    Equality Saturation Theory Exploration à la Carte, \textit{conditionally at OOPSLA 2023}.
+    Equality Saturation Theory Exploration à la Carte, OOPSLA 2023.
 
   \item David Cao, Rose Kunkel, \textbf{Chandrakana Nandi}, Max Willsey, Zachary Tatlock, Nadia Polikarpova. \\
     \textit{babble}: Learning Better Abstractions with E-Graphs and Anti-Unification, POPL 2023.
@@ -171,8 +173,10 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
 %following review committees are by invitation only. \\
 
 \begin{enumerate}[itemsep=-2pt]
+\item PLDI 2024 program committee (PC)
 \item ASPLOS 2024 program committee (PC)
 \item TFP 2024 program committee (PC)
+\item DSS 2024 review committee
 \item ISSTA 2023 program committee (PC)
 \item APLAS 2023 program committee (PC)
 \item ACM-SRC 2023 Grand Finale judge
@@ -194,6 +198,8 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
 
 \subsection{Organizing}
 \begin{enumerate}[itemsep=-2pt]
+  \item ICFP 2025 workshop co-chair
+  \item ICFP 2024 workshop co-chair
   \item PLDI-SRC 2024 co-chair
   \item ISSTA-SRC 2023 inaugural co-chair
   \item PLDI-SRC 2023 co-chair
